--- a/windows/package.json
+++ b/windows/package.json
@@ -14,8 +14,10 @@
     "rebuild": "npm run clean && npm run build"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "bindings": "^1.5.0",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.3",
     "nan": "^2.22.2",
     "node-addon-api": "^7.0.0",
     "uuid": "^11.1.0",
