--- a/package.json
+++ b/package.json
@@ -1,26 +1,50 @@
 {
   "name": "informator",
   "version": "2.0.0",
-  "description": "Чистий сервер захоплення екрану",
+  "description": "Професійна система захоплення екрану з мінімальним споживанням ресурсів",
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
+    "build:native": "node-gyp rebuild",
+    "build:all": "npm run build:native && npm run build",
     "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
-    "clean": "rmdir /s /q dist 2>nul || true"
+    "client": "ts-node src/capture-client.ts",
+    "clean": "rmdir /s /q dist 2>nul || true",
+    "test": "node test/test-capture.js"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "node-addon-api": "^8.5.0",
+    "winston": "^3.18.2",
     "ws": "^8.14.2"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
     "@types/express": "^4.17.20",
+    "@types/node": "^20.8.0",
     "@types/ws": "^8.5.6",
-    "typescript": "^5.2.2",
-    "ts-node": "^10.9.1"
+    "node-gyp": "^10.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
-  "keywords": ["screen-capture", "websocket", "typescript"],
+  "keywords": [
+    "screen-capture",
+    "windows",
+    "real-time",
+    "performance",
+    "napi",
+    "competition"
+  ],
   "author": "Informator Team",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "os": [
+    "win32"
+  ],
+  "cpu": [
+    "x64",
+    "ia32"
+  ]
 }
