--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build:native": "node-gyp rebuild",
     "build:all": "npm run build:native && npm run build",
     "start": "node dist/server.js",
+    "rtmp": "node dist/rtmp-server.js",
+    "start:all": "concurrently \"npm start\" \"npm run rtmp\"",
     "dev": "ts-node src/server.ts",
     "client": "ts-node src/capture-client.ts",
     "clean": "rmdir /s /q dist 2>nul || true",
@@ -15,15 +17,23 @@
     "postinstall": "node -e \"if (process.platform === 'win32') { require('child_process').execSync('npm run build:native', {stdio: 'inherit'}) }\""
   },
   "dependencies": {
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/mongoose": "^5.11.96",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.3",
+    "mongoose": "^8.19.0",
     "node-addon-api": "^8.5.0",
+    "node-media-server": "^4.0.21",
     "winston": "^3.18.2",
+    "winston-daily-rotate-file": "^5.0.0",
     "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.0",
     "@types/ws": "^8.5.6",
+    "concurrently": "^9.2.1",
     "node-gyp": "^10.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
